# tauri-plugin-posthog

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
docs/: implementation-plan.md
examples/tauri-app/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: client.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
