[package]
name = "tauri-plugin-posthog"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-posthog"

[dependencies]
tauri = { version = "2.8.5" }
posthog-rs = { version = "0.3", default-features = false, features = ["async-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1.13", features = ["v7", "serde"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
