[package]
name = "tauri-plugin-posthog"
version = "0.1.1"
authors = [ "ahonn" ]
description = "A Tauri v2 plugin for integrating PostHog analytics into your Tauri applications"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-posthog"

[dependencies]
tauri = { version = "2" }
posthog-rs = { version = "0.3", default-features = false, features = ["async-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
machine-uid = "0.5"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
